--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,17 @@
 [tool.poetry]
 name = "progressive-search"
-version = "0.1.0"
+version = "0.0.1"
 description = ""
 authors = ["Nikolay <nstrekopytov@gmail.com>"]
 readme = "README.md"
 packages = [{include = "progressive_search"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.12"
 numpy = "^1.24.2"
 matplotlib = "^3.7.1"
+scipy = "^1.10.1"
+ffmpeg = "^1.4"
 
 
 [build-system]
